--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
 
-set (input01 "")
+set (input01 "commands.txt")
 
-foreach(file IN LISTS input01)
+foreach(file IN LISTS input01 input02 input03 input04)
     configure_file(${file} ${file} COPYONLY)
 endforeach()
 
